Removes setup instructions for now.

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ subsequently are prevented from taking your seat.
   'tools/check' as well.
 -->
 
-<h2 id="setup">Setup</h2>
+<!-- <h2 id="setup">Setup</h2> -->
 
 <!--
 <p>
@@ -459,8 +459,8 @@ subsequently are prevented from taking your seat.
   </div>
 </div> <!-- End of 'shell' section. -->
 
-
-<div> <!-- Start of 'Git' section. -->
+<!--
+<div> <!-- Start of 'Git' section. --><!--
   <h3>Git</h3>
 
   <p>
@@ -585,7 +585,8 @@ subsequently are prevented from taking your seat.
   </div>
 </div> <!-- End of 'Python' section. -->
 
-<div> <!-- Start of 'R' section. -->
+<!--
+<div> <!-- Start of 'R' section. --><!--
   <h3>R</h3>
 
   <p>
