--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ subsequently are prevented from taking your seat.
 <h2>Syllabus</h2>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h3>Introduction to Reproducible Research</h3>
     <ul>
       <li>Recognize the problems that reproducible research helps address</li>
@@ -232,7 +232,7 @@ subsequently are prevented from taking your seat.
        </ul></li> -->
     </ul>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h3>Organizing your project to facilitate Reproducible Research</h3>
     <ul>
       <li>Organize projects and folders to enable reproducibility and reusability</li>
@@ -244,6 +244,8 @@ subsequently are prevented from taking your seat.
         <li><a href="naming-slides/">File naming</a></li>
       </ul></li> -->
     </ul>
+  </div>
+  <div class="col-md-4">
     <h3>Literate programming</h3>
     <ul>
       <li>Understand the value of having question, source code, and
