Adds Eventbrite page code.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ instructor: ["Mine Çetinkaya-Rundel (Duke, <a href='https://stat.duke.edu/'
 target='_blank'>Dept. of Statistical Science</a>)", "Karen Cranston (Duke, <a href='http://opentreeoflife.org' target='_blank'>Open Tree of Life</a>)", "Hilmar Lapp (Duke, <a href='http://genome.duke.edu' target='_blank'>GCB</a>)", "Dan Leehr (Duke, <a href='http://genome.duke.edu' target='_blank'>GCB</a>)"]
 contact: hilmar.lapp@duke.edu
 etherpad: 
-eventbrite: 
+eventbrite: 18455296288
 ---
 <!--
   HEADER
