Fixes link to NESCent and setup instructions.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ eventbrite: 18455296288
   The course and the curriculum were developed by the participants of
   the <a href="https://github.com/Reproducible-Science-Curriculum/Reproducible-Science-Hackathon-Dec-08-2014">Reproducible
   Science Curriculum Hackathon</a> held at the
-  National Evolutionary Synthesis Center (<a href="nescent.org">NESCent</a>) in
+  National Evolutionary Synthesis Center (<a href="http://nescent.org">NESCent</a>) in
   December 2014. The hackathon and instructor travel are supported by the National
   Science Foundation (NSF).
 </p>
@@ -339,7 +339,9 @@ subsequently are prevented from taking your seat.
   'tools/check' as well.
 -->
 
-<!-- <h2 id="setup">Setup</h2> -->
+<h2 id="setup">Setup</h2>
+
+<p>Setup instructions will be posted here closer to the workshop, about 1 week in advance.</p>
 
 <!--
 <p>
