Uncomments relevant installation sections.

--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@ subsequently are prevented from taking your seat.
 -->
 
 <h2 id="setup">Setup</h2>
-
+<!--
 <p>Setup instructions will be posted here closer to the workshop, about 1 week in advance.</p>
-
+-->
 <!--
 <p>
   <a href="setup/index.html">This page</a> has instructions on testing
@@ -463,8 +463,8 @@ subsequently are prevented from taking your seat.
   </div>
 </div> <!-- End of 'shell' section. -->
 
-<!--
-<div> <!-- Start of 'Git' section. --><!--
+
+<div> <!-- Start of 'Git' section. -->
   <h3>Git</h3>
 
   <p>
@@ -589,8 +589,8 @@ subsequently are prevented from taking your seat.
   </div>
 </div> <!-- End of 'Python' section. -->
 
-<!--
-<div> <!-- Start of 'R' section. --><!--
+
+<div> <!-- Start of 'R' section. -->
   <h3>R</h3>
 
   <p>
