Updates intro slides, and publishes links for morning.

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@ subsequently are prevented from taking your seat.
       <li>Identify pain points in getting your analysis to be reproducible.</li>
       <li>The role of documentation, sharing, automation, and organization in making your research more reproducible.</li>
       <li>Introducing some tools to solve these problems, specifically R/RStudio/RMarkdown.</li>
-      <!-- <li>Slides:
+      <li>Slides:
        <ul>
        <li><a href="intro-slides/intro-01-slides.html">Intro I slides</a></li>
        <li><a href="intro-slides/intro-02-slides.html">Intro II slides</a></li>
-       </ul></li> -->
+       </ul></li>
     </ul>
   </div>
   <div class="col-md-4">
@@ -238,11 +238,11 @@ subsequently are prevented from taking your seat.
       <li>Organize projects and folders to enable reproducibility and reusability</li>
       <li>Understand the structure of data files and the importance of documenting all changes made</li>
       <li>Using these practices, create a reproducible project workflow using knitr in RStudio.</li>
-      <!-- <li>Slides:
+      <li>Slides:
       <ul>
         <li><a href="organization-slides/">File organization</a></li>
         <li><a href="naming-slides/">File naming</a></li>
-      </ul></li> -->
+      </ul></li>
     </ul>
   </div>
   <div class="col-md-4">
