Publishes materials link for 1st morning.

--- a/index.html
+++ b/index.html
@@ -293,39 +293,40 @@ subsequently are prevented from taking your seat.
 
 <hr/>
 
-<!-- materials -- zip files to download 
+<!-- materials -- zip files to download -->
 <h2 id="materials">Materials</h2>
 <div class="row">
   <div class="col-md-4">
     <h3>Introduction</h3>
     <ul>
-      <li><a href="materials/intro.zip">Download</a></li>
+      <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-intro/releases/tag/data-v0.2">Download</a></li>
     </ul>
   </div>
   <div class="col-md-4">
     <h3>Organization</h3>
     <ul>
-      <li><a href="materials/organization.zip">Download</a></li>
+      <!-- <li><a href="materials/organization.zip">Download</a></li> -->
     </ul>
   </div>
   <div class="col-md-4">
     <h3>Automation</h3>
     <ul>
-      <li><a href="materials/automation.zip">Download</a></li>
+      <!-- <li><a href="materials/automation.zip">Download</a></li> -->
     </ul>
   </div>
 </div>
 <div class="row">
   <div class="col-md-4">
     <h3>Introduction to version control</h3>
-    	<li><a href="https://github.com/Reproducible-Science-Curriculum/rr-version-control/blob/master/02-hosting-activity.md">Link to tutorial</a></li>
+    	<ul>
+         <!-- <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-version-control/blob/master/02-hosting-activity.md">Link to tutorial</a></li> -->
   </div>
   <div class="col-md-4">
     <h3>Reproducibility checklist</h3>
     <p>A <a href="checklist.html">checklist</a> to evaluate and stimulate thoughts
       about the reproducility of your project.</p>
   </div>
-</div> -->
+</div> 
 
 <!--
   SETUP
