add link to etherpad

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ enddate: 2015-09-25
 instructor: ["Mine Çetinkaya-Rundel (Duke, <a href='https://stat.duke.edu/'
 target='_blank'>Dept. of Statistical Science</a>)", "Karen Cranston (Duke, <a href='http://opentreeoflife.org' target='_blank'>Open Tree of Life</a>)", "Hilmar Lapp (Duke, <a href='http://genome.duke.edu' target='_blank'>GCB</a>)", "Dan Leehr (Duke, <a href='http://genome.duke.edu' target='_blank'>GCB</a>)"]
 contact: hilmar.lapp@duke.edu
-etherpad: 
+etherpad: https://etherpad.mozilla.org/cwfShOVreq
 eventbrite: 18455296288
 ---
 <!--
@@ -326,7 +326,7 @@ subsequently are prevented from taking your seat.
     <p>A <a href="checklist.html">checklist</a> to evaluate and stimulate thoughts
       about the reproducility of your project.</p>
   </div>
-</div> 
+</div>
 
 <!--
   SETUP
