add link to download zip files

--- a/index.html
+++ b/index.html
@@ -299,13 +299,14 @@ subsequently are prevented from taking your seat.
   <div class="col-md-4">
     <h3>Introduction</h3>
     <ul>
-      <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-intro/releases/tag/data-v0.2">Download</a></li>
+      <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-intro/releases/tag/data-v0.2.zip">Download</a></li>
     </ul>
   </div>
   <div class="col-md-4">
     <h3>Organization</h3>
     <ul>
       <!-- <li><a href="materials/organization.zip">Download</a></li> -->
+      <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-organization1/archive/data-v0.4.zip">Download</a></li>
     </ul>
   </div>
   <div class="col-md-4">
