--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@ subsequently are prevented from taking your seat.
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Introduction to Reproducible Research</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee/Tea break</td> </tr>
-      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Organizing your project to facilitate Reproducible Research</td> </tr>
+      <tr> <td>10:45</td>  <td>Organizing your project to facilitate Reproducible Research</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:00</td>  <td>Literate programming</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee/Tea break</td> </tr>
       <tr> <td>15:30</td>  <td>Literate programming</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
@@ -166,9 +167,9 @@ subsequently are prevented from taking your seat.
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Version control</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee/Tea break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating your workflows</td> </tr>
-      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Automating your workflows</td> </tr>
+      <tr> <td>10:45</td>  <td>Automating your workflows</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:00</td>  <td>Automating your workflows</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee/Tea break</td> </tr>
       <tr> <td>15:30</td>  <td>Sharing and publishing your research workflo      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
     </table>
