--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ subsequently are prevented from taking your seat.
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Automating your workflows</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee/Tea break</td> </tr>
-      <tr> <td>15:30</td>  <td>Sharing and publishing your research workflo      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>15:30</td>  <td>Sharing and publishing your research workflow</td></tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
