Adding download stub for literate programming.

--- a/index.html
+++ b/index.html
@@ -307,14 +307,13 @@ subsequently are prevented from taking your seat.
   <div class="col-md-4">
     <h3>Organization</h3>
     <ul>
-      <!-- <li><a href="materials/organization.zip">Download</a></li> -->
       <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-organization1/archive/data-v0.4.zip">Download</a></li>
     </ul>
   </div>
   <div class="col-md-4">
-    <h3>Automation</h3>
+    <h3>Literate Programming</h3>
     <ul>
-      <!-- <li><a href="materials/automation.zip">Download</a></li> -->
+      <!-- <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-literate-programming/archive/data-v0.4.zip">Download</a></li> -->
     </ul>
   </div>
 </div>
@@ -323,6 +322,12 @@ subsequently are prevented from taking your seat.
     <h3>Introduction to version control</h3>
     	<ul>
          <!-- <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-version-control/blob/master/02-hosting-activity.md">Link to tutorial</a></li> -->
+  </div>
+  <div class="col-md-4">
+    <h3>Automation</h3>
+    <ul>
+      <!-- <li><a href="materials/automation.zip">Download</a></li> -->
+    </ul>
   </div>
   <div class="col-md-4">
     <h3>Reproducibility checklist</h3>
