Publishes slides and materials links for litprog.

--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@ subsequently are prevented from taking your seat.
   result side by side</li>
       <li>Use literate programming to create executable documentation</li>
       <li>Create self-documenting data cleaning and quality control reports</li>
-      <!-- <li>Slides:
+      <li>Slides:
       <ul>
         <li><a href="lit-prog-slides/">Literate programming</a></li>
-      </ul></li> -->
+      </ul></li>
     </ul>
   </div>
 </div>
@@ -313,7 +313,7 @@ subsequently are prevented from taking your seat.
   <div class="col-md-4">
     <h3>Literate Programming</h3>
     <ul>
-      <!-- <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-literate-programming/archive/data-v0.4.zip">Download</a></li> -->
+      <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-literate-programming/archive/data-v0.4.zip">Download</a></li>
     </ul>
   </div>
 </div>
