--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ subsequently are prevented from taking your seat.
      <ul>
       <li>Exposure to the motivations of using version control.</li>
       <li>Learn the basics of Git via Git and Github.</li>
-      <!-- <li><a href="vcs-slides/01-motivation-slides.html">Slides</a></li> -->
+      <li><a href="slides/01-github-slides.html">git slides</a></li>
      </ul>
   </div>
   <div class="col-md-4">
