--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ subsequently are prevented from taking your seat.
      <ul>
       <li>Exposure to the motivations of using version control.</li>
       <li>Learn the basics of Git via Git and Github.</li>
-      <li><a href="slides/01-github-slides.html">git slides</a></li>
+      <li><a href="slides/01-github-slides.html">Slides</a></li>
      </ul>
   </div>
   <div class="col-md-4">
@@ -287,7 +287,7 @@ subsequently are prevented from taking your seat.
       <li>Ensuring your workflow is permanently archived and citable</li>
       <li>Documentation and metadata for reusability</li>
       <li>Choosing licenses for software and data</li>
-      <!-- <li><a href="slides/01-publication-slides.html">Slides</a> -->
+      <li><a href="slides/01-publication-slides.html">Slides</a>
     </ul>
   </div>
 </div>
@@ -326,7 +326,7 @@ subsequently are prevented from taking your seat.
   <div class="col-md-4">
     <h3>Automation</h3>
     <ul>
-      <!-- <li><a href="materials/automation.zip">Download</a></li> -->
+      <li><a href="https://github.com/Reproducible-Science-Curriculum/rr-automation/archive/data-v0.2.zip">Download</a></li>
     </ul>
   </div>
   <div class="col-md-4">
