Adds slideshows and links to them for Automation.

--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@ subsequently are prevented from taking your seat.
       <li>Make files as a concept</li>
       <li>Utilizing free continuous integration tools</li>
       <li>Recreate figures automatically</li>
+      <li>Slides:
+      <ul>
+        <li><a href="slides/01-automation-slides.html">Automation</a></li>
+        <li><a href="slides/02-functions-slides.html">Functions</a></li>
+      </ul></li>
     </ul>
   </div>
   <div class="col-md-4">
