--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@ subsequently are prevented from taking your seat.
       <ul>
         <li><a href="slides/01-automation-slides.html">Automation</a></li>
         <li><a href="slides/02-functions-slides.html">Functions</a></li>
+        <li><a href="slides/03-functions-for-data-slides.html">Functions for data</a></li>
+        <li><a href="slides/04-functions-for-figures-slides.html">Functions for figures</a></li>
+        <li><a href="slides/05-testing-slides.html">Testing</a></li>
+        <li><a href="slides/06-automating-slides.html">Putting it all together</a></li>
       </ul></li>
     </ul>
   </div>
