--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@ subsequently are prevented from taking your seat.
      <ul>
       <li>Exposure to the motivations of using version control.</li>
       <li>Learn the basics of Git via Git and Github.</li>
-      <li><a href="slides/01-github-slides.html">Slides</a></li>
+      <li>Slides:
+        <ul><li><a href="slides/01-github-slides.html">Version control, Git, and Github</a></li>
+      </ul></li>
      </ul>
   </div>
   <div class="col-md-4">
@@ -296,7 +298,9 @@ subsequently are prevented from taking your seat.
       <li>Ensuring your workflow is permanently archived and citable</li>
       <li>Documentation and metadata for reusability</li>
       <li>Choosing licenses for software and data</li>
-      <li><a href="slides/01-publication-slides.html">Slides</a>
+      <li>Slides:
+        <ul><li><a href="slides/01-publication-slides.html">Sharing, publishing, archiving, licensing</a></li></ul>
+      </li>
     </ul>
   </div>
 </div>
