Updated version of Publication slides.

--- a/slides/01-publication-slides.html
+++ b/slides/01-publication-slides.html
@@ -1020,16 +1020,6 @@ This work is published from:
 
 </section>
 <section data-transition="linear" data-transition-speed="default">
-
-<div class="slideContent noTitle" >
-<!-- Replace with your university library's data management guide -->
-
-<iframe width="100%" height="700px" src="http://guides.uflib.ufl.edu/datamanagement"></iframe>
-
-</div>
-
-</section>
-<section data-transition="linear" data-transition-speed="default">
 <h3>what goes where when?</h3>
 <div class="column column1 slideContent" >
 <p><strong>You will likely have different artifacts:</strong></p>
@@ -1060,6 +1050,16 @@ This work is published from:
 <li>code snapshot to Zenodo </li>
 </ul></li>
 </ul>
+
+</div>
+
+</section>
+<section data-transition="linear" data-transition-speed="default">
+
+<div class="slideContent noTitle" >
+<!-- Replace with your university library's data management guide -->
+
+<iframe width="100%" height="700px" src="http://library.duke.edu/data/guides/data-management"></iframe>
 
 </div>
 
