Updates Publication slides.

--- a/slides/01-publication-slides.html
+++ b/slides/01-publication-slides.html
@@ -831,7 +831,7 @@ This work is published from:
 <h3>why, what, when, where, how, with whom to share &amp; publish?</h3>
 <div class="slideContent" >
 <ul>
-<li>why publish?</li>
+<li>why publish, share, archive?</li>
 <li>what materials do we need to publish?</li>
 <li>when do we make them available? </li>
 <li>who are we sharing with?</li>
@@ -844,13 +844,31 @@ This work is published from:
 </div>
 
 </section>
+<section data-state="prompt" data-transition="linear" data-transition-speed="default">
+<h3>why publish, share, archive?</h3>
+<div class="slideContent" >
+<p><br/><br/>
+<strong>Write down your top 3 reasons. When prompted, compare with your neighbor(s).</strong></p>
+
+<p>Consider:</p>
+
+<ul>
+<li>Mandates</li>
+<li>Norms</li>
+<li>Value for you</li>
+<li>Value for science</li>
+</ul>
+
+</div>
+
+</section>
 <section data-transition="linear" data-transition-speed="default">
 <h3>why?</h3>
 <div class="slideContent" >
 <ul>
 <li class="fragment">funding agency / journal requirement</li>
 <li class="fragment">community expects it</li>
-<li class="fragment">increased visibility / citation</li>
+<li class="fragment"><em>increased visibility / citation</em></li>
 </ul>
 
 </div>
@@ -912,11 +930,11 @@ This work is published from:
 <li>funding agency / journal requirement</li>
 <li>community expects it</li>
 <li>increased visibility / citation</li>
-<li>better research</li>
-<li>more efficient, less redundant science
+<li>better research
 
 <ul>
-<li>by allowing others to build upon our work</li>
+<li>higher quality</li>
+<li>more efficient, less redundant science</li>
 </ul></li>
 </ul>
 
@@ -930,8 +948,8 @@ This work is published from:
 <strong>Catalog the artifacts you produced this morning.</strong></p>
 
 <ul>
-<li>What needs to be published?</li>
-<li>What does not need to be published?</li>
+<li>What needs to be published, and why?</li>
+<li>What does not need to be published, and why?</li>
 <li>Anything that cannot be published?</li>
 </ul>
 
